--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: machina;
+    src: url('./fonts/659dbdfd5a080be8d348316e_PP\ Neue\ Machina\ Inktrap\ Medium.ttf');
+}
+
+@font-face {
+    font-family: machinaa;
+    src: url('./fonts/659dbdfd5a080be8d348316f_PPNeueMachina_\ Light.ttf');
+}
+
+@font-face {
+    font-family: satoshi;
+    src: url('./fonts/659dbdfd5a080be8d3483173_Satoshi-Variable.ttf');
+}
+ 
 :root{
    --salmon:#ef9071;
    --black:#000;
